Handled the Merge Conflict, working modified code